--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "melronier-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start:dev": "nodemon"
   },
