--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,14 +7,7 @@ jobs:
   sychMaster:
     runs-on: ubuntu-latest
     steps:
+      - name: Get latest code
       - uses: actions/checkout@v2
         with:
           ref: master
-      - name: Reset master branch
-        run: |
-          git fetch origin master:master
-          git reset --hard master
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v3
-        with:
-          branch: developer
