--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,14 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: master
-     - name: Merge developer -> master
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v3
+        with:
+          branch: developer
+      - name: Merge developer -> master
         uses: devmasx/merge-branch@master
         with:
           type: now
           from_branch: developer
           target_branch: master
-          github_token: ${{ github.token }}
+          github_token: ${{ github_token }}
