--- a/package.json
+++ b/package.json
@@ -4,16 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "nodemon"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^17.0.10",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
+    "express-validator": "^6.14.0",
+    "mongoose": "^6.1.7",
     "nodemon": "^2.0.15",
     "typescript": "^4.5.5"
+  },
+  "devDependencies": {
+    "@types/express-validator": "^3.0.0"
   }
 }
