--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,4 +36,4 @@ jobs:
           type: now
           from_branch: developer
           target_branch: master
-          github_token: ${{ github_token }}
+          github_token: ${{ secrets.GIT_TOKEN }}
