--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,6 @@ jobs:
         uses: devmasx/merge-branch@master
         with:
           type: now
-          from_branch: developer
-          target_branch: master
+          from_branch: master
+          target_branch: developer
           github_token: ${{ secrets.GIT_TOKEN }}
