--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^17.0.10",
+    "@types/yup": "^0.29.13",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
     "mongoose": "^6.1.7",
     "nodemon": "^2.0.15",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/express-validator": "^3.0.0"
