--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
     "mongoose": "^6.1.7",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
     "typescript": "^4.5.5",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@types/express-validator": "^3.0.0"
+    "@types/express-validator": "^3.0.0",
+    "@types/nodemailer": "^6.4.4"
   }
 }
